fix flickering on drop message due to conflicting enter/leave events

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -20,6 +20,18 @@ body,
     position: absolute;
 }
 
+.hovering .drop-skrim {
+    display: block;
+}
+
+.drop-skrim {
+    display: none;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 100;
+}
+
 h2, h3 {
     color: @white;
 }
